# financial-QA

./: .gitignore  .test.env  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: answer_question.py  api_call.py  api_spec.md  load_spec.py  query_builder.py
