[tool.poetry]
name = "finchat-request-builder"
version = "0.1.0"
description = ""
authors = ["Ashish Kumar Singh <ashishkumarsingh046@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
openai = "^1.46.1"
fastapi = "^0.115.0"
uvicorn = "^0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
